<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        android:onClick="onChangeAvatarClickListener"
        android:src="@drawable/ic_avatar_default" />

    <RelativeLayout
        android:id="@+id/container_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:onClick="onForgotPasswordClickListener"
            android:text="@string/forgot_password"
            android:textColor="@color/color_hyper_link"
            android:textSize="@dimen/text_size_normal" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:layout_alignLeft="@id/txt_forgot_password"
            android:layout_alignRight="@id/txt_forgot_password"
            android:layout_below="@id/txt_forgot_password"
            android:background="@color/color_hyper_link" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_light_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/container_bottom"
        android:layout_below="@id/img_avatar">

        <TextView
            android:id="@+id/txt_title_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/email"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title_email"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_edt_login"
            android:hint="@string/hint_enter_your_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_13ssp" />

        <TextView
            android:id="@+id/txt_title_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txt_title_email"
            android:layout_alignRight="@id/txt_title_email"
            android:layout_below="@id/edt_email"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/pass_word"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edt_email"
            android:layout_alignRight="@id/edt_email"
            android:layout_below="@id/txt_title_password"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/bg_edt_login"
            android:hint="@string/hint_enter_your_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_13ssp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignLeft="@id/edt_password"
            android:layout_below="@id/edt_password"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_btn_login"
            android:onClick="onLoginClickListener"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_normal" />

    </RelativeLayout>

</RelativeLayout>